--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -8,5 +8,11 @@
   },
   "script": {
     "preserveSymlinks": true
-  }
+  },
+  "layer": [
+    {
+      "name": "Battle",
+      "value": 1
+    }
+  ]
 }
